# serializer version: 1
# name: TestResultsPathRefusals.test_directory_with_two_results_files
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: both contains 2 results files:
        both/x/ash_aggregated_results.json
        both/y/ash_aggregated_results.json
      Pass one --results per shard rather than a parent directory. Merging everything found beneath a
      directory would make the merged set depend on whatever else is in the tree, including a previous
      merged report.
  
    ''',
  })
# ---
# name: TestResultsPathRefusals.test_directory_without_results
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: No ash_aggregated_results.json found in empty. Checked
      ash_aggregated_results.json, ash_output/ash_aggregated_results.json,
      .ash/ash_output/ash_aggregated_results.json and then recursively. Check that the shard's CI job
      succeeded and uploaded its output directory.
  
    ''',
  })
# ---
# name: TestResultsPathRefusals.test_invalid_output_format
  dict({
    'exit_code': 2,
    'stderr': '''
      Usage: ashx merge [OPTIONS]
      Try 'ashx merge -h' for help.
      ╭─ Error ──────────────────────────────────────────────────────────────────────────────────────────╮
      │ Invalid value: 'pdf' is not a valid format. Valid formats are: aggregated, text, flat-json,      │
      │ yaml, csv, html, dict, junitxml, markdown, sarif, asff, ocsf, cyclonedx, spdx, custom            │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  
    ''',
    'stdout': '',
  })
# ---
# name: TestResultsPathRefusals.test_no_results_option
  dict({
    'exit_code': 2,
    'stderr': '''
      Usage: ashx merge [OPTIONS]
      Try 'ashx merge -h' for help.
      ╭─ Error ──────────────────────────────────────────────────────────────────────────────────────────╮
      │ Missing option '--results'.                                                                      │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  
    ''',
    'stdout': '',
  })
# ---
# name: TestResultsPathRefusals.test_path_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: --results path does not exist: shard-missing. Refusing to merge, because skipping
      an unreadable shard would produce a partial report that reads as complete.
  
    ''',
  })
# ---
# name: TestResultsPathRefusals.test_results_file_is_not_json
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Could not read shard results from shard0.json: 1 validation error for
      AshAggregatedResults
        Invalid JSON: key must be a string at line 1 column 3
          For further information visit https://errors.pydantic.dev/<PYDANTIC_VERSION>/v/json_invalid
  
    ''',
  })
# ---
# name: test_merge_of_an_incomplete_union_exits_1
  dict({
    'exit_code': 1,
    'stderr': '''
      Scan incomplete: grype (MISSING)
  
    ''',
    'stdout': '''
      
      === ASH Merge: 2 of 2 shards recombined ===
      Merged results: merged/ash_aggregated_results.json
      Scanners: 3 | Findings: 0 | Actionable: 0 | Suppressed: 0
      ERROR (1) Exiting because 1 scanner(s) in the merged scan did not evaluate everything they were
      given
        grype: MISSING
  
    ''',
  })
# ---
# name: test_refusal[assigned_scanner_not_a_candidate]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: These scanners were assigned to a shard but are not in the candidate set:
      semgrep. An assignment that names a scanner the executor did not resolve cannot have been produced
      by partitioning that set, so the provenance does not describe this run.
  
    ''',
  })
# ---
# name: test_refusal[candidate_assigned_to_no_shard]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: These scanners were candidates on every shard but assigned to none: grype. The
      partition did not cover the set it was taken from, so no shard ran them and the merged report would
      not say so.
  
    ''',
  })
# ---
# name: test_refusal[candidate_set_on_some_shards_only]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Shards [1] record no candidate scanner set while the others do. These results
      were produced by different versions of ASH, so they are not known to have partitioned the same
      scanner set -- and the shards without the record are the ones that could be hiding a gap. Re-run the
      whole matrix on one version.
  
    ''',
  })
# ---
# name: test_refusal[candidate_sets_differ]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: The shards partitioned different scanner sets: shard 0: bandit, semgrep; shard 1:
      bandit, grype, semgrep. Each partition is internally valid, so nothing else here can see this: one
      executor was missing a plugin module, or --python-only or a config override was applied to some jobs
      and not others. Merging would report a scan that never covered the scanners the smaller set omitted.
  
    ''',
  })
# ---
# name: test_refusal[duplicate_index]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Shard indices [0] appear more than once. Merging a shard twice would double-count
      every finding it reported, because merging does not deduplicate.
  
    ''',
  })
# ---
# name: test_refusal[index_outside_count]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Shard indices [2] are outside the declared count of 2.
  
    ''',
  })
# ---
# name: test_refusal[missing_index]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Missing shard results for indices [1] of 2. Those scanners did not run, or their
      results were never collected -- check whether the matching CI jobs succeeded and uploaded their
      artifacts. Refusing to merge a partial scan into a report that would read as complete.
  
    ''',
  })
# ---
# name: test_refusal[overlap]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: The same scanner was assigned to more than one shard: bandit (shards 0 and 1).
      Its findings would be counted once per shard.
  
    ''',
  })
# ---
# name: test_refusal[owning_shard_recorded_no_result]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: The shard that owned these scanners recorded no result for them: semgrep (owned
      by shard 1). Another shard's skip marker is the only trace left, and adopting it would report a
      scanner that never ran as deliberately skipped. Check whether that shard's scan phase completed.
  
    ''',
  })
# ---
# name: test_refusal[scanner_in_results_owned_by_no_shard]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: These scanners appear in shard results but no shard was assigned them: trivy
      (PASSED, seen in shard0/ash_aggregated_results.json). No shard ran them, so merging would report
      them as deliberately skipped rather than never attempted. The status of each is named above because
      the cause differs: the executors resolved different scanner sets (one missing a plugin module, or
      --python-only or a config override applied to some jobs and not others), or a scanner was excluded
      by every shard's partition. A scanner that failed to construct, or whose plugin module failed to
      import, is recorded ERROR or MISSING instead and is reported through --fail-on-incomplete-scanners
      rather than refused here.
  
    ''',
  })
# ---
# name: test_refusal[shard_completed_none_of_its_scanners]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: These shards completed none of the scanners they owned:
        shard 1 of 2: semgrep (MISSING)
      Their scanners contributed no findings because they did not run, not because there was nothing to
      find, so merging would report a partial scan as a whole one. Check whether those CI jobs had the
      scanners' tools available. Pass --no-fail-on-incomplete-scanners to merge anyway.
  
    ''',
  })
# ---
# name: test_refusal[shard_counts_disagree]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: Shard results disagree about the total shard count: saw [2, 3]. These results
      come from different runs, or the shard count changed while the pipeline was in flight; merging them
      would produce a report missing whole scanners.
  
    ''',
  })
# ---
# name: test_refusal[shard_selected_another_shards_scanner]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: These shards intended to run a scanner assigned to another shard: semgrep
      (selected by shard 0, assigned to shard 1). A shard only runs what it was assigned, so the exclusion
      that implements the split did not take effect on that executor -- the scanner ran on both shards and
      its findings would be counted once per shard. The assignments themselves are disjoint, so no other
      check here can see this.
  
    ''',
  })
# ---
# name: test_refusal[unstamped_shard]
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Refusing to merge: No shard provenance found in 1 results file(s):
        shard0/ash_aggregated_results.json
      Only a scan run with --shard-index and --shard-count records which scanners it owned, and without
      that record there is no way to tell a complete set of shards from a partial one. Refusing to guess:
      an unstamped file could equally be a whole unsharded scan or one shard of many.
  
    ''',
  })
# ---
# name: test_verdict_line_for_actionable_findings
  dict({
    'stderr': '',
    'stdout': '''
      
      === ASH Merge: 3 of 3 shards recombined ===
      Merged results: merged/ash_aggregated_results.json
      Scanners: 0 | Findings: 5 | Actionable: 3 | Suppressed: 1
      ERROR (2) Exiting due to 3 actionable findings across the merged shards
  
    ''',
  })
# ---
